# pyRainAdjustment

./: README.md  pyproject.toml
config/: README.md
config/IdMapFiles/: IdAdjustmentFactor.xml  IdDownscaling.xml
config/ModuleConfigFiles/: ComputeQuantileCorrectionGrids.xml  ExportHistoricForecastPyRainAdjustment.xml  Meteo_Apply_Rain_Gauge_Adjustment.xml  Meteo_Rain_Downscaling.xml  Meteo_Rain_Gauge_Adjustment.xml  ProcessApplyRainGaugeAdjustment.xml  ProcessRainDownscaling.xml  ProcessRainGaugeAdjustment.xml  Process_Apply_QuantileMapping.xml  Process_Determine_QuantileMapping.xml
config/RegionConfigFiles/: ModuleInstanceDescriptors.xml  Parameters.xml  WorkflowDescriptors.xml
config/WorkflowFiles/: Meteo_Rain_Downscaling_ERA5.xml  Meteo_Rain_Downscaling_Gauge_Adjustment_ERA5.xml  Meteo_Rain_Downscaling_HSAF.xml  Meteo_Rain_Gauge_Adjustment_ERA5.xml  Meteo_Rain_Gauge_Adjustment_HSAF.xml  Process_Apply_QuantileMapping.xml  Process_Determine_QuantileMapping.xml
docs/: Conventions.md  Downscaling.md  Forecasting_adjustment.md  Hindcasting_adjustment.md  Introduction.md
rainadjustment/: README.md  adjusters.py  downscaling.py  io.py  main.py  main_qq.py  utils.py  xml_config_parser.py
rainadjustment/functions/: __init__.py  adjusters.py  climatology_preprocessor.py  downscaling.py  old_qq_functions.py  qq_mapping.py  wradlib_adjust_utils.py
rainadjustment/input/: prepped_grid_stations.nc
rainadjustment/utils/: __init__.py  binary_dilution.py  io.py  utils.py  xml_config_parser.py
