[tool.poetry]
name = "rainadjustment"
version = "0.1.0"
description = "Rainfall downscaling and correction tools for Delft-FEWS"
authors = ["Ruben Imhoff, Maarten Verbrugge"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
rasterio = "^1.4.2"
geopandas = "^1.0.1"
xarray = "^2024.11.0"
rioxarray = "^0.18.1"
numpy = "^2.1.3"
pyproj = "^3.7.0"
netCDF4 = "^1.7.2"
dask = "^2024.11.2"
pandas = "^2.2.3"
wradlib = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
